# carnot

./: Cargo.toml  DEVLOG.md  README.md
examples/: demo.rs  simple-game.rs
src/: app.rs  builtins.rs  ecs.rs  graphics.rs  input.rs  lib.rs  render.rs  window.rs
src/builtins/: primitive.rs  primitives.rs  systems.rs
src/builtins/resources/: time.rs
src/builtins/shaders/: crosshair.wgsl  scene.wgsl  shader.wgsl
src/builtins/systems/: camera.rs  camera_system.rs  render.rs  render_system.rs
src/ecs/: component.rs  query.rs  resource.rs  system.rs  world.rs
src/ecs/system/: system_param.rs  system_param_function.rs
src/graphics/: camera.rs  implicit.rs  material.rs  mesh.rs  transform.rs
src/render/: context.rs  render_pass.rs  renderer.rs  texture.rs
