[package]
name = "carnot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
glam = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
wgpu = "0.20"
winit = "0.30"
