[package]
name = "carnot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18.0"
glam = "0.28.0"
image = "0.25.2"
rand = "0.8.5"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
wgpu = "22"
winit = "0.30"
